Add health probes

--- a/apps/sample-app/deployment.yaml
+++ b/apps/sample-app/deployment.yaml
@@ -17,6 +17,16 @@ spec:
         image: nginx:1.22
         ports:
         - containerPort: 80
+        livenessProbe:
+          httpGet:
+            path: /
+            port: 80
+          initialDelaySeconds: 20
+        readinessProbe:
+          httpGet:
+            path: /
+            port: 80
+          initialDelaySeconds: 5
         volumeMounts:
         - name: web
           mountPath: /usr/share/nginx/html/index.html
